# a2zaiusage

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
scripts/: gemini-wrapper.sh  install.js
src/: main.rs  types.rs
src/providers/: amazon_q.rs  claude_code.rs  cline.rs  cursor.rs  gemini_cli.rs  gemini_code_assist.rs  github_copilot.rs  mod.rs  openai_codex.rs  opencode.rs  replit.rs  sourcegraph_cody.rs  tabnine.rs  warp.rs  windsurf.rs
src/utils/: db.rs  format.rs  mod.rs  paths.rs  time.rs  tokenizer.rs
